# sber-agents

./: README.md
02-llm-api/: README.md  report.md
02-llm-api/src/: bot.py
03-aidd/: report.md
03-aidd/.cursor/rules/: conventions.mdc  workflow.mdc
03-aidd/docs/: conventions.md  idea.md  tasklist.md  vision.md  workflow.md
03-aidd/src/: bot.py  config.py  logger.py
04-multimodal/live/: pyproject.toml  report.md
04-multimodal/live/docs/: idea.md  tasklist.md  vision.md
04-multimodal/live/prompts/: system_prompt_voice.txt
04-multimodal/live/screenshots/: README.md
04-multimodal/live/src/: config.py  handlers.py  llm.py  stt.py
05-rag-langchain/live/: .env.backup  env.example  pyproject.toml  report.md  наблюдения.txt
05-rag-langchain/live/data/: sberbank_help_documents.json
05-rag-langchain/live/src/: bot.py  indexer.py  indexer_with_json.py
06-monitoring-qa/: COMPLETE_REPORT.md  REPORT_SUMMARY.md  REPORT_UPDATED.md  SCREENSHOTS_ADDED.md  report.md
06-monitoring-qa/live/: .gitignore  FIREWORKS_SETUP_GUIDE.md  FIXES_SUMMARY.md  RESTART_BOT.md  SWITCH_TO_FIREWORKS.md  SWITCH_TO_OPENROUTER.md  TROUBLESHOOTING.md  configure_fireworks.py  configure_openrouter.py  env.example  pyproject.toml  switch_to_fireworks.sh
06-monitoring-qa/live/docs/references/: naive-rag.ipynb
06-monitoring-qa/live/src/: config.py  evaluation.py  indexer.py
06-monitoring-qa/screenshots/: README.md
07-advanced-rag/live/: comments.txt  pyproject.toml
07-advanced-rag/live/src/: config.py  evaluation.py  rag.py
docs/: idea.md
(+1 files in other folders)
